# easydictate

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  start.sh
docs/: CONFIG.md  OPERATIONS.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-04-04-ai-voice-overlay.md
docs/superpowers/specs/: 2026-04-04-ai-voice-overlay-design.md
src/easydictate/: __init__.py  __main__.py  cli.py  core.py  daemon.py  engine.py  gui.py
tests/: test_cli.py  test_core.py  test_daemon.py  test_engine.py  test_gui.py  test_main.py
