[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easydictate"
version = "0.1.0"
description = "GNOME dictation daemon with portal-based global shortcuts and Groq Whisper transcription"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dictation", "gnome", "wayland", "whisper", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
]

[project.scripts]
easydictate = "easydictate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
